// Database schema for Project-IT3180

Table users {
  id varchar [pk]
  username varchar [unique, not null]
  password varchar [not null]
  email varchar [unique, not null]
  name varchar [not null]
  reset_code varchar
  created_at datetime [not null]
  updated_at datetime
  last_login_at datetime
}

Table user_roles {
  user_id varchar [pk, ref: > users.id]
  role varchar [pk]
}

Table households {
  id int [pk, increment]
  household_code varchar [unique, not null]
  apartment_number varchar [not null]
  area_m2 decimal [not null]
  address varchar [not null]
  owner_name varchar [not null]
  phone_number varchar [not null]
  registration_date datetime [not null]
  created_by varchar
  created_at datetime [not null]
}

Table residents {
  id int [pk, increment]
  household_id int [ref: > households.id, not null]
  full_name varchar [not null]
  date_of_birth date [not null]
  gender varchar [not null]
  id_card_number varchar [unique, not null]
  relationship_with_owner varchar [not null]
  is_owner boolean [not null]
  created_by varchar
  created_at datetime [not null]
}

Table fee_types {
  id int [pk, increment]
  name varchar [unique, not null]
  description varchar [not null]
  price_per_m2 decimal [not null]
  is_per_m2 boolean [not null]
  is_required boolean [not null]
  created_by varchar
  created_at datetime [not null]
}

Table fee_collections {
  id int [pk, increment]
  household_id int [ref: > households.id, not null]
  fee_type_id int [ref: > fee_types.id, not null]
  month_year varchar [not null]
  amount decimal [not null]
  is_paid boolean [not null]
  paid_date date
  paid_by varchar
  collected_by varchar
  created_by varchar [not null]
  created_at datetime [not null]
}

Table donation_campaigns {
  id int [pk, increment]
  name varchar [not null]
  description text [not null]
  start_date date [not null]
  end_date date
  target_amount decimal
  created_by varchar
  created_at datetime [not null]
}

Table donations {
  id int [pk, increment]
  household_id int [ref: > households.id, not null]
  donation_campaign_id int [ref: > donation_campaigns.id, not null]
  amount decimal [not null]
  donation_date date
  created_by varchar
  created_at datetime [not null]
}

Table population_changes {
  id int [pk, increment]
  resident_id int [ref: > residents.id, not null]
  household_id int [ref: > households.id, not null]
  change_type varchar [not null]
  start_date date [not null]
  end_date date
  reason varchar
  destination_address varchar
  source_address varchar
  is_approved boolean [not null]
  created_by varchar
  created_at datetime [not null]
}

Table history_records {
  id int [pk, increment]
  entity_type varchar [not null]
  entity_id int [not null]
  action_type varchar [not null]
  timestamp datetime [not null]
} 

// Bổ sung bảng quản lý phương tiện
Table vehicles {
  id int [pk, increment]
  household_id int [ref: > households.id, not null]
  license_plate varchar [unique, not null]
  type enum('motorbike', 'car') [not null]
  registered_date date
  is_active boolean [not null, default: true]
  created_by varchar
  created_at datetime [not null]
}

// Phí gửi xe theo từng phương tiện và từng tháng
Table vehicle_fees {
  id int [pk, increment]
  vehicle_id int [ref: > vehicles.id, not null]
  month_year varchar [not null] // định dạng: 'YYYY-MM'
  amount decimal [not null]
  is_paid boolean [not null, default: false]
  paid_date date
  paid_by varchar
  collected_by varchar
  created_by varchar
  created_at datetime [not null]
}

// Hóa đơn tiện ích (điện, nước, internet) thu hộ
Table utility_bills {
  id int [pk, increment]
  household_id int [ref: > households.id, not null]
  month_year varchar [not null] // định dạng: 'YYYY-MM'
  type enum('electricity', 'water', 'internet') [not null]
  amount decimal [not null]
  is_paid boolean [not null, default: false]
  paid_date date
  paid_by varchar
  collected_by varchar
  created_by varchar
  created_at datetime [not null]
}